--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Isaac Twum's Portfolio</h1>
-    <h2>I'm an entry level Web Developer</h2>
+    <h2>I Changed this, Yes I did</h2>
     <hr />
     <ol>
         <li><a href="./public/movie-ranking.html">Personal Movie Ranking Project</a></li>
