--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="./assets/images/movies.png" alt="Movie Ranking"/>
         <br />
         <li><a href="./public/birthday-invite.html">Birthday Invite Project</a></li>
-        <img src="./assets/images/birthdaypic.jpg" alt="Birthday Invite"/>
+        <img src="./assets/images/birthdaypic.png" alt="Birthday Invite"/>
     </ol>
     <hr />
     <a href="./public/about.html">About Me</a><br />
